Add basic role management and minor graphical design changes

--- a/Baze/Views/Home/Index.cshtml
+++ b/Baze/Views/Home/Index.cshtml
@@ -2,31 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
-    <div id="inputForm">
-        <textarea id="message" class="form-control col-6"></textarea>
+    <div class="container">
+        <div id="inputForm" class="form-group">
+            <textarea id="message" class="form-control col-6"></textarea>
+        </div>
         <input type="button" id="sendBtn" class="btn btn-primary" value="Send" />
+        
+        
+        <div class="card col-6 mt-2" style="overflow-y:scroll; max-height:58vh">
+            <div id="chatroom" class="list-group">
+            </div>
+        </div>
+        <script src="~/js/signalr/dist/browser/signalr.min.js"></script>
+        <script>
+            const hubConnection = new signalR.HubConnectionBuilder().withUrl("/chat").build();
+
+            hubConnection.on("Send", function (data) {
+                let elem = document.createElement("p");
+                elem.className = "list-group-item";
+                elem.appendChild(document.createTextNode(data));
+                let firstElem = document.getElementById("chatroom").firstChild;
+                document.getElementById("chatroom").insertBefore(elem, firstElem);
+            });
+
+            document.getElementById("sendBtn").addEventListener("click", function (e) {
+                let message = document.getElementById("message").value;
+                hubConnection.invoke("Send", message);
+            });
+
+            hubConnection.start();
+        </script>
     </div>
-    <div class="card col-6 mt-2">
-        <div id="chatroom" class="list-group"></div>
-    </div>
-    <script src="~/js/signalr/dist/browser/signalr.min.js"></script>
-    <script>
-        const hubConnection = new signalR.HubConnectionBuilder().withUrl("/chat").build();
-
-        hubConnection.on("Send", function (data) {
-            let elem = document.createElement("p");
-            elem.className = "list-group-item";   
-            elem.appendChild(document.createTextNode(data));
-            let firstElem = document.getElementById("chatroom").firstChild;
-            document.getElementById("chatroom").insertBefore(elem, firstElem);
-        });
-
-        document.getElementById("sendBtn").addEventListener("click", function (e) {
-            let message = document.getElementById("message").value;
-            hubConnection.invoke("Send", message);
-        });
-
-        hubConnection.start();
-    </script>
-</div>
