Add select end date ability, project rename and minor todo list graphical improvement

--- a/Baze/Views/Role/Edit.cshtml
+++ b/Baze/Views/Role/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@model Baze.Models.ChangeRoleViewModel
+@model Todo.Models.ChangeRoleViewModel
 
 <h2>Change roles for user @Model.UserEmail</h2>
 <div class="container">
