--- a/Baze/Views/Role/UserList.cshtml
+++ b/Baze/Views/Role/UserList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Baze.Models.ApplicationUser>
+﻿@model IEnumerable<Todo.Models.ApplicationUser>
 
 <h2>User List</h2>
 <div class="container">
