--- a/Baze/Views/Todo/AddItemPartial.cshtml
+++ b/Baze/Views/Todo/AddItemPartial.cshtml
@@ -1,7 +1,20 @@
 ﻿@model TodoItem
 
 <form asp-action="AddItem" method="post">
-    <label asp-for="Title">Add a new item:</label>
-    <input asp-for="Title" />
-    <button type="submit">Add</button>
+    <div class="form-group">
+        <label asp-for="Title">Add a new item:</label>
+        <input asp-for="Title" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="DueAt">End date for this item:</label>
+        <input type="datetime" asp-for="DueAt" class="datepicker" data-provide="datepicker"/>
+    </div>
+    <button type="submit" class="btn btn-primary">Add</button>
 </form>
+@section Scripts{
+    <script>
+        $(".datepicker").datepicker({
+            format: 'dd/mm/yyyy'
+        });
+    </script>
+ }
