--- a/Baze/Views/_ViewImports.cshtml
+++ b/Baze/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using Baze
-@using Baze.Models
-@using Baze.Controllers 
+﻿@using Todo
+@using Todo.Models
+@using Todo.Controllers 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
