Added datetimepicker intead of textbox for choosung end event date

--- a/Baze/Views/Shared/_Layout.cshtml
+++ b/Baze/Views/Shared/_Layout.cshtml
@@ -44,8 +44,11 @@
             &copy; 2020 - ToDoodle - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <link rel="stylesheet" href="~/jquery-datetimepicker/jquery.datetimepicker.css" />
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
