--- a/Baze/Views/Todo/AddItemPartial.cshtml
+++ b/Baze/Views/Todo/AddItemPartial.cshtml
@@ -1,20 +1,14 @@
 ﻿@model TodoItem
 
 <form asp-action="AddItem" method="post">
-    <div class="form-group">
+    <div class="form-group col-8">
         <label asp-for="Title">Add a new item:</label>
-        <input asp-for="Title" class="form-control"/>
+        <input asp-for="Title" class="form-control" />
     </div>
-    <div class="form-group">
+    <div class="form-group col-3">
         <label asp-for="DueAt">End date for this item:</label>
-        <input type="datetime" asp-for="DueAt" class="datepicker" data-provide="datepicker"/>
+        <input type="text" placeholder="Pick datetime" asp-for="DueAt" class="datetimepicker form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Add</button>
+    <button type="submit" class="btn btn-primary ml-1">Add</button>
 </form>
-@section Scripts{
-    <script>
-        $(".datepicker").datepicker({
-            format: 'dd/mm/yyyy'
-        });
-    </script>
- }
+
