--- a/Baze/Views/Todo/Index.cshtml
+++ b/Baze/Views/Todo/Index.cshtml
@@ -40,3 +40,12 @@
         @await Html.PartialAsync("AddItemPartial", new TodoItem())
     </div> 
 </div>
+
+@section Scripts{ 
+    <script>
+        $(document).ready(function () {
+            $(".datetimepicker").datetimepicker({
+            });
+        });
+    </script>
+}
