--- a/Baze/Views/Home/Index.cshtml
+++ b/Baze/Views/Home/Index.cshtml
@@ -18,12 +18,20 @@
             const hubConnection = new signalR.HubConnectionBuilder().withUrl("/chat").build();
 
             hubConnection.on("Send", function (data) {
+                createMessageNode(data);
+            });
+
+            hubConnection.on("Notify", function (data) {
+                createMessageNode(data);
+            });
+
+            function createMessageNode(message) {
                 let elem = document.createElement("p");
                 elem.className = "list-group-item";
-                elem.appendChild(document.createTextNode(data));
+                elem.appendChild(document.createTextNode(message));
                 let firstElem = document.getElementById("chatroom").firstChild;
                 document.getElementById("chatroom").insertBefore(elem, firstElem);
-            });
+            }
 
             document.getElementById("sendBtn").addEventListener("click", function (e) {
                 let message = document.getElementById("message").value;
