--- a/Baze/Views/Account/Login.cshtml
+++ b/Baze/Views/Account/Login.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Todo.ViewModels.LoginViewModel
 
+@{
+    ViewData["Title"] = "Login Page";
+}
+
 <h2>Sign In</h2>
 <form method="post" asp-controller="Account" asp-action="Login"
       asp-route-returnUrl="@Model.ReturnUrl">
