--- a/Baze/Views/Home/Index.cshtml
+++ b/Baze/Views/Home/Index.cshtml
@@ -4,12 +4,11 @@
 
     <div class="container">
         <div id="inputForm" class="form-group">
-            <textarea id="message" class="form-control col-6"></textarea>
+            <textarea id="message" class="form-control col-sm-6"></textarea>
         </div>
         <input type="button" id="sendBtn" class="btn btn-primary" value="Send" />
         
-        
-        <div class="card col-6 mt-2" style="overflow-y:scroll; max-height:58vh">
+        <div class="card col-sm-6 mt-2" style="overflow-y:scroll; max-height:58vh">
             <div id="chatroom" class="list-group">
             </div>
         </div>
