--- a/Baze/Views/Todo/Index.cshtml
+++ b/Baze/Views/Todo/Index.cshtml
@@ -27,10 +27,7 @@
                     </form>
                 </td>
 
-                <td>
-                    @item.Title
-                </td>
-
+                <td>@item.Title</td>
                 <td>@item.DueAt.Humanize()</td>
             </tr>
         }
