--- a/Baze/Views/Todo/AddItemPartial.cshtml
+++ b/Baze/Views/Todo/AddItemPartial.cshtml
@@ -1,14 +1,16 @@
 ﻿@model TodoItem
 
 <form asp-action="AddItem" method="post">
-    <div class="form-group col-8">
+    <div class="form-group col-sm-auto">
         <label asp-for="Title">Add a new item:</label>
         <input asp-for="Title" class="form-control" />
     </div>
-    <div class="form-group col-3">
+    <div class="form-group col-sm-4">
         <label asp-for="DueAt">End date for this item:</label>
         <input type="text" placeholder="Pick datetime" asp-for="DueAt" class="datetimepicker form-control" />
     </div>
-    <button type="submit" class="btn btn-primary ml-1">Add</button>
+    <div class="form-group col-sm-1">
+        <button type="submit" class="btn btn-primary">Add</button>
+    </div>
 </form>
 
