ui improvements, icorrect redirect fix(partialy need authorized user fix)

--- a/Baze/Views/Account/Register.cshtml
+++ b/Baze/Views/Account/Register.cshtml
@@ -3,26 +3,29 @@
 @{
     ViewData["Title"] = "Register Page";
 }
-
-<h2>New user registration!</h2>
-<form method="post" asp-controller="Account" asp-action="Register">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Email"></label><br />
-        <input asp-for="Email" />
-        <span asp-validation-for="Email"></span>
+<div class="sign-block">
+    <h2>New user registration!</h2>
+    <div class="container">
+        <form method="post" asp-controller="Account" asp-action="Register">
+            <div asp-validation-summary="ModelOnly"></div>
+            <div class="form-group col-sm-auto row">
+                <label asp-for="Email"></label><br />
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email"></span>
+            </div>
+            <div class="form-group col-sm-auto row">
+                <label asp-for="Password"></label><br />
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password"></span>
+            </div>
+            <div class="form-group col-sm-auto row">
+                <label asp-for="ConfirmPassword"></label><br />
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword"></span>
+            </div>
+            <div>
+                <input type="submit" value="Register" class="btn btn-primary" />
+            </div>
+        </form>
     </div>
-    <div>
-        <label asp-for="Password"></label><br />
-        <input asp-for="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
-    <div>
-        <label asp-for="ConfirmPassword"></label><br />
-        <input asp-for="ConfirmPassword" />
-        <span asp-validation-for="ConfirmPassword"></span>
-    </div>
-    <div>
-        <input type="submit" value="Register" />
-    </div>
-</form>
+</div>
