Make chat available only for authorized users, minor chat improvements

--- a/Baze/Views/Home/Index.cshtml
+++ b/Baze/Views/Home/Index.cshtml
@@ -35,6 +35,7 @@
             document.getElementById("sendBtn").addEventListener("click", function (e) {
                 let message = document.getElementById("message").value;
                 hubConnection.invoke("Send", message);
+                $('#message').val('');
             });
 
             hubConnection.start();
