--- a/Baze/Views/Home/Index.cshtml
+++ b/Baze/Views/Home/Index.cshtml
@@ -3,10 +3,12 @@
 }
 
     <div class="container">
-        <div id="inputForm" class="form-group">
-            <textarea id="message" class="form-control col-sm-6"></textarea>
-        </div>
-        <input type="button" id="sendBtn" class="btn btn-primary" value="Send" />
+        <form class="form-group">
+            <div id="inputForm" class="form-group">
+                <textarea id="message" class="form-control col-sm-6"></textarea>
+            </div>
+            <input type="button" id="sendBtn" class="btn btn-primary" value="Send" />
+        </form>
         
         <div class="card col-sm-6 mt-2" style="overflow-y:scroll; max-height:58vh">
             <div id="chatroom" class="list-group">
