TD-2: Added displaying popup on setting todo item done

--- a/Baze/Views/Todo/Index.cshtml
+++ b/Baze/Views/Todo/Index.cshtml
@@ -38,6 +38,8 @@
     </div> 
 </div>
 
+@await Html.PartialAsync("_ConfirmModal")
+
 @section Scripts{ 
     <script>
         $(document).ready(function () {
