TD-1 Added edit and modified add item functionality

--- a/Baze/Views/Shared/_Layout.cshtml
+++ b/Baze/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ToDoodle</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/jquery-datetimepicker/jquery.datetimepicker.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon" />
 </head>
@@ -45,11 +46,9 @@
             &copy; 2020 - ToDoodle - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <link rel="stylesheet" href="~/jquery-datetimepicker/jquery.datetimepicker.css" />
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
+    <script src="~/jquery-datetimepicker/jquery.datetimepicker.full.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
