--- a/Baze/Views/Todo/Index.cshtml
+++ b/Baze/Views/Todo/Index.cshtml
@@ -36,6 +36,12 @@
                         @Html.ActionLink("Edit", "_AddEditItem", new { id = item.ID },
                                            new { @class = "btn btn-primary modal-link" })
                     </td>
+                    <td>
+                        <form asp-action="DeleteItem" method="POST">
+                            <button type="button" class="btn btn-danger delete-btn">Delete</button>
+                            <input type="hidden" name="id" value="@item.ID" />
+                        </form>
+                    </td>
                 </tr>
             }
         </table>
