Small fixes and improvements

--- a/Baze/Views/Home/AccessDenied.cshtml
+++ b/Baze/Views/Home/AccessDenied.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Permissions error!";
 }
 <div class="alert alert-danger">
-    <h1>Unfortunately, access denied!</h1>
-    <strong>Please ensure you choose correct link!</strong>
+    <h1>Access denied!</h1>
+    <strong>Please ensure the address is correct!</strong>
 </div> 
