--- a/Baze/Views/Todo/Index.cshtml
+++ b/Baze/Views/Todo/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@model TodoViewModel
+﻿@using Todo.ViewModels
 @using Humanizer
+
+@model TodoViewModel
 
 @{
     ViewData["Title"] = "Manage your todo list!";
