--- a/Baze/Views/Role/Edit.cshtml
+++ b/Baze/Views/Role/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@model Todo.Models.ChangeRoleViewModel
+
+@using Todo.ViewModels
+@model ChangeRoleViewModel
 
 <h2>Change roles for user @Model.UserEmail</h2>
 <div class="container">
